# tovero

./: COPYING  CREDITS  INSTALL  Kavalogic.txt  Makefile.am  README  README.md  bootstrap  build_clean  build_clean_debug  configure.ac
doc/: NOTES.txt
examples/: README.txt  box.lisp  bus.lisp  contoured-sphere.lisp  kinetophone.lisp  rocking-horse.lisp  sphere-tovero-viewer.lisp  sphere.cpp  sphere.lisp  turtle-clive-shader.lisp  turtle.lisp
examples/libfive/: bilinsky.lisp  klein.lisp  menger.lisp  taper.lisp
examples/logo/: horseshoe.lisp  letter-k.lisp  plaque.lisp
make/: Makefile.inc
scripts/: Makefile.am  tovero.in
src/tovero/: Makefile.am  addons.lisp  csg.lisp  extra-shapes.lisp  extra-transforms.lisp  extra-vec.lisp  generic.lisp  kernel.lisp  shapes.lisp  tovero.asd  tovero.lisp  transforms.lisp  utilities.lisp  vec.lisp
src/tovero-viewer/: Makefile.am  camera.lisp  shader.lisp  tovero-viewer.asd  tovero-viewer.lisp  viewer.lisp
